--- a/pixel-chess/public/stylesheets/splash.css
+++ b/pixel-chess/public/stylesheets/splash.css
@@ -1,4 +1,18 @@
 h1 {
-    font-size: x-large;
+    font-size:2cm;
     text-align: center;
+    margin: auto;
+}
+
+.right-horse{
+    position: fixed;
+    right: 100px;
+}
+
+#buttons {
+    text-align:center;
+    position: absolute;
+    right:50%;
+    top: 30%;
+    margin:auto;
 }
