--- a/pixel-chess/public/stylesheets/splash.css
+++ b/pixel-chess/public/stylesheets/splash.css
@@ -12,12 +12,34 @@
     src: url(../fonts/ancientmoderntales.woff);
 }
 
+@keyframes glow {
+	0% {
+		text-shadow: none;
+
+		color: #ccc;
+	}
+
+	70% {
+		text-shadow: 0 0 30px #4d4c4c, 0 0 40px #4d4c4c, 0 0 40px #4d4c4c,
+			0 0 60px #4d4c4c, 0 0 60px #2b2b2b, 0 0 30px #4d4c4c, 0 0 98px #2b2b2b;
+		color: #fff;
+	}
+
+	100% {
+		text-shadow: none;
+		color: #ccc;
+	}
+}
+
 h1 {
     font-family: AncientModernTales;
     font-size:10em;
     text-align: center;
     margin: auto;
     user-select: none;
+
+    text-shadow: none;
+	animation: glow 8s infinite;
 }
 
 .right-horse{
@@ -25,9 +47,22 @@ h1 {
     right: 100px;
 }
 
+
+#darkmode{
+    font-family: PixelEmulator;
+    text-align: center;
+    font-size: 15px;
+    color:white;
+    background: black;
+    border-radius:13px;
+    width: 122px;
+    height: 40px;
+}
+
 #buttons {
     text-align:center;
     position: absolute;
+    border-radius:13px;
     right:40%;
     top: 30%;
     margin: auto;
@@ -35,5 +70,9 @@ h1 {
 
 #buttons button, input {
     font-family: Pixeboy;
+    margin:15px;
+    box-shadow:0 0 7px black;
+    cursor: pointer;
+    border-radius:13px;
     font-size:5em;
 }
