Added timer and fixed a bug with darkmode

--- a/pixel-chess/public/stylesheets/play.css
+++ b/pixel-chess/public/stylesheets/play.css
@@ -162,6 +162,10 @@
     text-align: center;
 }
 
+#timer {
+    font-family: PixelEmulator;
+}
+
 #center button{
     font-family: PixelEmulator;
     border-radius:13px;
