--- a/pixel-chess/public/stylesheets/play.css
+++ b/pixel-chess/public/stylesheets/play.css
@@ -12,6 +12,30 @@
     src: url(../fonts/ancientmoderntales.woff);
 }
 
+@keyframes buttonAnim {
+    0% {
+      transform: scale3d(1, 1, 1);
+    }
+    30% {
+      transform: scale3d(1.25, 0.75, 1);
+    }
+    40% {
+      transform: scale3d(0.75, 1.25, 1);
+    }
+    50% {
+      transform: scale3d(1.15, 0.85, 1);
+    }
+    65% {
+      transform: scale3d(0.95, 1.05, 1);
+    }
+    75% {
+      transform: scale3d(1.05, 0.95, 1);
+    }
+    100% {
+      transform: scale3d(1, 1, 1);
+    }
+  }
+
 .chess-board {user-select: none; border-spacing: 0; border-collapse: collapse; margin-left: auto; margin-right: auto; }
             .chess-board th { padding: .5em; }
             .chess-board td { border: 1px black solid; width: 4em; height: 4em; }
@@ -136,7 +160,7 @@
     right: 45%;
 }
 
-#quitBtn button{
+#quitBtn input{
     font-family: PixelEmulator;
     text-align: center;
     font-size: 25px;
@@ -166,7 +190,7 @@
     font-family: PixelEmulator;
 }
 
-#center button{
+#center input{
     font-family: PixelEmulator;
     border-radius:13px;
     width: 100px;
@@ -186,4 +210,8 @@
     /* color:green; */
     margin: 25px;
     font-size: 25px;
+}
+
+button:hover, input:hover{
+    animation: buttonAnim 0.9s linear alternate both;
 }
